--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ h1{
    color: white;
     border: 6px solid rgb(17, 85, 17);
     border-radius: 10px;
+    width: 800px;
     
 }
 
@@ -12,6 +13,7 @@ h2{
     color: black;
     border: solid 5px rgb(151, 85, 4);
     border-radius: 10px;
+    width: 800px;
     }
 img{
     border: 5px solid;
