--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h2{
     color: black;
     border: solid 5px rgb(151, 85, 4);
     border-radius: 10px;
-    width: 50%;
+    width: 1400px;
     }
 img{
     border: 5px solid;
